--- a/.github/workflows/rate-my-intern-CI.yml
+++ b/.github/workflows/rate-my-intern-CI.yml
@@ -28,6 +28,8 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: See current directory
+      run: ls
     - name: Run chmod to make gradlew executable
       run: chmod +x ./gradlew
     - name: Build with Gradle
