--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 	mavenCentral()
 }
 
+gradle wrapper
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
