--- a/.github/workflows/rate-my-intern.yml
+++ b/.github/workflows/rate-my-intern.yml
@@ -28,7 +28,11 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+    - name: Run gradle wrapper
+      run: gradle wrapper
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+      uses: gradle/gradle-build-action@v2
       with:
         arguments: build
+    - name: Execute Gradle build
+      run: ./gradlew build
