--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,11 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'org.webjars:webjars-locator-core'
+    implementation 'org.webjars:sockjs-client:1.5.1'
+    implementation 'org.webjars:stomp-websocket:2.3.4'
+    implementation 'org.webjars:bootstrap:5.2.2'
+    implementation 'org.webjars:jquery:3.3.1-1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
