--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,11 @@ dependencies {
     implementation 'org.webjars:jquery:3.3.1-1'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+    implementation 'com.google.code.gson:gson:2.10'
+    implementation('junit:junit:4.13.2')
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation('junit:junit:4.13.2')
     testImplementation('org.junit.jupiter:junit-jupiter:5.9.0')
 }
 
