--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://heffalump.db.elephantsql.com/jifphlaa
 spring.datasource.username=jifphlaa
 spring.datasource.password=AiQWKk3PQQoQZlv_dtYKgu2m1Wn4m94j
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.session.jdbc.initialize-schema=always
+spring.session.store-type=jdbc
