--- a/.github/workflows/rate-my-intern.yml
+++ b/.github/workflows/rate-my-intern.yml
@@ -18,24 +18,6 @@ permissions:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-      - name: Run gradle wrapper
-        run: gradle wrapper
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build
-
-  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -70,13 +52,11 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
-      - name: run tests
-        env:
-          DATABASE_NAME_TEST: ${{ matrix.database-name }}
-          DATABASE_USER: ${{ matrix.database-user }}
-          DATABASE_PASSWORD: ${{ matrix.database-password }}
-          DATABASE_HOST: ${{ matrix.database-host }}
-          DATABASE_PORT: ${{ matrix.database-port }}
-          POSTGRES_DB: ${{ matrix.database-name }}
-        run:
-          gradle clean test
+      - name: Run gradle wrapper
+        run: gradle wrapper
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build
+      - name: Run test
+        run: gradle clean test --stacktrace
