fixed docker integration test

--- a/docker-compose.tests.yml
+++ b/docker-compose.tests.yml
@@ -5,3 +5,6 @@ services:
     volumes:
       - .:/usr/src/app
       - ~/.gradle:/root/.gradle
+    depends_on:
+      - "postgres"
+      - "spring"
