--- a/bin/test/application.properties
+++ b/bin/test/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/test
+spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
