--- a/.github/workflows/rate-my-intern.yml
+++ b/.github/workflows/rate-my-intern.yml
@@ -17,18 +17,29 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
     steps:
+      - name: checkout
+        uses: actions/checkout@v3
+
+      - name: start containers
+        run: docker compose -f docker-compose.yml -f docker-compose.test.yml up
+
       - uses: actions/checkout@v3
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
-      - name: Docker Compose Action
-        uses: isbang/compose-action@v1.4.1
-        compose-file: |
-          docker-compose.yml
-          docker-compose.test.yml
+      - name: Run gradle wrapper
+        run: gradle wrapper
+      - name: Run test
+        run: gradle clean test --stacktrace
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build
 
+      - name: stop containers
+        run: docker-compose -f docker-compose.yml -f docker-compose.test.yml down
