--- a/.github/workflows/rate-my-intern.yml
+++ b/.github/workflows/rate-my-intern.yml
@@ -21,6 +21,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: build docker
+        run: docker compose -f docker-compose.yml up -d --build
+      - name: run docker test
+        run: docker compose run --rm test
       - uses: isbang/compose-action@v1.4.1
         with:
           compose-file: |
