--- a/.github/workflows/rate-my-intern.yml
+++ b/.github/workflows/rate-my-intern.yml
@@ -19,37 +19,41 @@ permissions:
 jobs:
   docker:
     runs-on: ubuntu-latest
+#    services:
+#      postgres:
+#        image: postgres:latest
+#        env:
+#          POSTGRES_DB: testDb
+#          POSTGRES_USER: postgres
+#          POSTGRES_PASSWORD: postgres
+#        ports:
+#          - 5432:5432
+#        options: >-
+#          --health-cmd pg_isready
+#          --health-interval 10s
+#          --health-timeout 5s
+#          --health-retries 5
     steps:
       - uses: actions/checkout@v3
       - name: build docker
-        run: docker compose -f docker-compose.yml up -d --build
+        run: docker compose up -d --build
       - name: run docker test
         run: docker compose run --rm test
-      - uses: isbang/compose-action@v1.4.1
-        with:
-          compose-file: |
-            docker-compose.yml
-            docker-compose.test.yml
-
-#      - name: start containers
-#        run: docker compose -f docker-compose.yml -f docker-compose.test.yml up
-#
 #      - name: Set up JDK 11
 #        uses: actions/setup-java@v3
 #        with:
 #          java-version: '11'
 #          distribution: 'temurin'
-#
 #      - name: Run gradle wrapper
 #        run: gradle wrapper
-#
 #      - name: Run test
 #        run: gradle clean test --stacktrace
-#
+#        env:
+#          POSTGRES_DB: testDb
+#          POSTGRES_USER: postgres
+#          POSTGRES_PASSWORD: postgres
+#          POSTGRES_HOST: localhost
 #      - name: Build with Gradle
 #        uses: gradle/gradle-build-action@v2
 #        with:
 #          arguments: build
-#
-#      - name: stop containers
-#        run: docker-compose -f docker-compose.yml -f docker-compose.test.yml down
