--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,22 @@ services:
       - "8080:8080"
     depends_on:
       - "postgres"
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
+      POSTGRES_HOST: postgres
+  test:
+    build: .
+    command: bash -c "gradle clean test"
+    volumes:
+      - .:/usr/src/app
+      - ~/.gradle:/root/.gradle
+    depends_on:
+      - "postgres"
+      - "spring"
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
+      POSTGRES_HOST: postgres
