--- a/bin/test/application.properties
+++ b/bin/test/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=1
 spring.session.jdbc.initialize-schema=always
+spring.session.store-type=jdbc
