--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,6 @@ replay_pid*
 /frontend/node_modules/
 /src/main/resources/application.properties
 postgres-data
+
+#Ignore Mac DS_Store files
+.DS_Store
