--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
