--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=1
 spring.session.jdbc.initialize-schema=always
 spring.session.store-type=jdbc
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
