deleted deleteVote, implemented voteHelpful such that modifications/removals to votes are possible

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:postgresql://heffalump.db.elephantsql.com/jifphlaa
+spring.datasource.url=jdbc:postgresql://heffalump.db.elephantsql.com/
+spring.datasource.username=jifphlaa
+spring.datasource.password=cTTKGk3mszc87cbL58aisznf5bAmBN32
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=1
 spring.session.jdbc.initialize-schema=always
