--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation 'org.webjars:webjars-locator-core'
     implementation 'org.webjars:sockjs-client:1.5.1'
     implementation 'org.webjars:stomp-websocket:2.3.4'
-    implementation 'org.webjars:bootstrap:5.2.2'
+    implementation 'org.webjars:bootstrap:5.2.3'
     implementation 'org.webjars:jquery:3.3.1-1'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.session:spring-session-jdbc'
@@ -35,8 +35,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.session:spring-session-core'
     implementation'org.postgresql:postgresql'
+    implementation 'com.h2database:h2:1.0.60'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation('org.assertj:assertj-core:3.23.1')
     testImplementation('org.junit.jupiter:junit-jupiter:5.9.0')
 }
 
