Update properties to automatically generate schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:postgresql://heffalump.db.elephantsql.com/
-spring.datasource.username=jifphlaa
-spring.datasource.password=cTTKGk3mszc87cbL58aisznf5bAmBN32
+spring.datasource.url=jdbc:postgresql://suleiman.db.elephantsql.com/
+spring.datasource.username=hhuncvkl
+spring.datasource.password=XF0M7qDuk1z-usDypu7jUeNVHwVgRtpb
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.maximum-pool-size=1
-spring.session.jdbc.initialize-schema=always
+spring.datasource.hikari.maximum-pool-size=2
 spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
