--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,7 +1,10 @@
-spring.datasource.url=jdbc:postgresql://heffalump.db.elephantsql.com/jifphlaa
-spring.datasource.username=jifphlaa
-spring.datasource.password=AiQWKk3PQQoQZlv_dtYKgu2m1Wn4m94j
+spring.datasource.url=jdbc:postgresql://suleiman.db.elephantsql.com/
+spring.datasource.username=hhuncvkl
+spring.datasource.password=XF0M7qDuk1z-usDypu7jUeNVHwVgRtpb
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.maximum-pool-size=1
-spring.session.jdbc.initialize-schema=always
+spring.datasource.hikari.maximum-pool-size=2
 spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
