--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://suleiman.db.elephantsql.com/
-spring.datasource.username=hhuncvkl
-spring.datasource.password=XF0M7qDuk1z-usDypu7jUeNVHwVgRtpb
+spring.datasource.username=\${POSTGRES_USER}
+spring.datasource.password=\${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=2
 spring.session.store-type=jdbc
