--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "import": "^0.0.6",
@@ -23,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-stomp": "^5.1.0",
     "sockjs": "^0.3.24",
+    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
