--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation('junit:junit:4.13.2')
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.session:spring-session-core'
+    implementation 'org.modelmapper:modelmapper:2.1.1'
     implementation'org.postgresql:postgresql'
     implementation 'com.h2database:h2:1.0.60'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
