--- a/build.gradle
+++ b/build.gradle
@@ -34,13 +34,14 @@ dependencies {
     implementation('junit:junit:4.13.2')
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.session:spring-session-core'
-    implementation 'org.modelmapper:modelmapper:2.1.1'
+    implementation 'org.modelmapper:modelmapper:3.1.1'
     implementation'org.postgresql:postgresql'
     implementation 'com.h2database:h2:1.0.60'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation('org.assertj:assertj-core:3.23.1')
     testImplementation('org.junit.jupiter:junit-jupiter:5.9.0')
+    testImplementation 'org.springframework.security:spring-security-test:5.7.3'
 }
 
 tasks.named('test') {
