--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.7.5'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'java'
+    id 'maven-publish'
 }
 
 group = 'com.example'
@@ -10,6 +11,17 @@ sourceCompatibility = '11'
 
 repositories {
     mavenCentral()
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.Campfire'
+            artifactId = 'my-artifact'
+            version = '1.0-SNAPSHOT'
+            from components.java
+        }
+    }
 }
 
 dependencyManagement {
