add db platform

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,17 @@ spring.datasource.username=\${POSTGRES_USER}
 spring.datasource.password=\${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=2
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=src/main/resources/keystore/campfire.p12
+#server.ssl.key-store-password=campfire2023
+#server.ssl.key-alias=campfire
+#server.ssl.enabled=true
+#
+#server.port=8443
